tests/negative/gold/type7_test.gold
tests/negative/type7_test.toit:101:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/type7_test.toit:32:8: error: Type mismatch. Expected 'string'. Got 'A'
  foo3 .x/A:
       ^~
tests/negative/type7_test.toit:43:21: error: Type mismatch. Expected 'string'. Got 'A'
  foo3 --named/bool .x/A:
                    ^~
tests/negative/type7_test.toit:61:11: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.x 499
          ^~~
tests/negative/type7_test.toit:62:12: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.y2 499
           ^~~
tests/negative/type7_test.toit:63:12: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.z2 499
           ^~~
tests/negative/type7_test.toit:73:19: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.x --named 499
                  ^~~
tests/negative/type7_test.toit:74:20: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.y2 --named 499
                   ^~~
tests/negative/type7_test.toit:75:20: error: Type mismatch. Expected 'string'. Got 'int'
  a = A.z2 --named 499
                   ^~~
tests/negative/type7_test.toit:85:9: error: Type mismatch. Expected 'string'. Got 'int'
  a.foo 499
        ^~~
tests/negative/type7_test.toit:86:10: error: Type mismatch. Expected 'string'. Got 'int'
  a.bar2 499
         ^~~
tests/negative/type7_test.toit:87:10: error: Type mismatch. Expected 'string'. Got 'int'
  a.gee2 499
         ^~~
tests/negative/type7_test.toit:97:17: error: Type mismatch. Expected 'string'. Got 'int'
  a.foo --named 499
                ^~~
tests/negative/type7_test.toit:98:18: error: Type mismatch. Expected 'string'. Got 'int'
  a.bar2 --named 499
                 ^~~
tests/negative/type7_test.toit:99:18: error: Type mismatch. Expected 'string'. Got 'int'
  a.gee2 --named 499
                 ^~~
tests/negative/type7_test.toit:10:18: error: Type mismatch. Expected 'string'. Got 'A'
  constructor.x3 .x/A:
                 ^~
tests/negative/type7_test.toit:21:31: error: Type mismatch. Expected 'string'. Got 'A'
  constructor.x3 --named/bool .x/A:
                              ^~
Compilation failed.
